@@ -1,1 +1,4 @@
-class SubscriptionDivision < ActiveRecord::Base; end
+class SubscriptionDivision < ActiveRecord::Base
+  belongs_to :division
+  belongs_to :subscription
+end
